--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,9 @@ dependencies:
   provider: ^6.0.5
   http: ^1.1.0
   flutter_spinkit: ^5.2.0
+  fluttertoast: ^8.2.2
+  another_flushbar: ^1.12.30
+  shared_preferences: ^2.2.0
 
 dev_dependencies:
   flutter_test:
